k8s/base/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  labels:
    app: authelia
spec:
  type: ClusterIP
  ports:
    - port: 9091
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: authelia
